src/kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: yogi
  labels:
    app: yogi
spec:
  volumes:
    - name: yogi-etc
      hostPath:
        path: '/storage/yogi/etc'
    - name: yogi-run
      hostPath:
        path: '/storage/yogi/run'
  containers:
  - image: yogi:latest
    name: main
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - mountPath: "/usr/local/yogi/etc"
        name: yogi-etc
      - mountPath: "/usr/local/yogi/run"
        name: yogi-run
