src/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
