src/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yogi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - yogi.schmizzolin.de
      secretName: schmizzolin-tls
  rules:
    - host: yogi.schmizzolin.de
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: yogi
                port:
                  number: 80
